[package]
name = "spider-cloud-cli"
version = "0.1.3"
edition = "2021"
authors = [ "j-mendez <jeff@a11ywatch.com>"]
description = "The Spider Cloud CLI for web crawling and scraping"
license = "MIT"
readme = "README.md"
keywords = ["crawler", "web-crawler", "web-scraper", "spider", "web-indexer"]
categories = ["web-programming"]
include = ["src/*", "../../LICENSE", "README.md"]

[dependencies]
clap = { version = "4.5.13", features = ["derive"]}
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
spider-client = { path = "../rust", version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
