[package]
name = "spider-cloud-cli"
version = "0.1.30"
edition = "2021"
authors = [ "j-mendez <jeff@spider.cloud>"]
description = "The Spider Cloud CLI for web crawling and scraping"
license = "MIT"
readme = "README.md"
keywords = ["crawler", "web-crawler", "web-scraper", "spider", "web-indexer"]
categories = ["web-programming"]
include = ["src/*", "../../LICENSE", "README.md"]

[dependencies]
clap = { version = "4", features = ["derive"]}
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
spider-client = { path = "../rust", version = "0.1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
