[package]
name = "spider-client"
version = "0.1.46"
edition = "2021"
authors = [ "j-mendez <jeff@spider.cloud>"]
description = "Spider Cloud client"
license = "MIT"
readme = "README.md"
repository = "https://github.com/spider-rs/spider-clients"
keywords = ["crawler", "web-crawler", "web-scraper", "spider", "web-indexer"]
categories = ["web-programming"]
include = ["src/*", "../../LICENSE", "README.md"]

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
bytes =  { version = "1", features = ["serde"]}
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
tokio-stream = "0.1"
backon = { version = "1", features = ["tokio-sleep"] }
tokio-util = "0.7"
csv = {version = "1", optional = true }
quick-xml = { version = "0.38", features = ["serialize"], optional = true }

[features]
csv=["dep:csv"]
xml=["dep:quick-xml"]

[dev-dependencies]
dotenv = "0.15.0"
lazy_static = "1.5.0"
